---
source: compiler-core/src/erlang/tests/panic.rs
expression: "\n     pub fn main() {\n      \"lets\"\n      |> panic as \"pipe\"\n      |> panic as \"other panic\"\n    }\n    "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> any().
main() ->
    _pipe = <<"lets"/utf8>>,
    _pipe@1 = (erlang:error(#{rakun_error => panic,
            message => <<"pipe"/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 4}))(_pipe),
    (erlang:error(#{rakun_error => panic,
            message => <<"other panic"/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 5}))(_pipe@1).
